Fix filesquash-img css

--- a/src/components/img/img.scss
+++ b/src/components/img/img.scss
@@ -3,5 +3,6 @@ filesquash-img {
 
   > img {
     display: block;
+    width: 100%;
   }
 }
